CREATE TABLE orders
(
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    user_id         BIGINT,
    symbol          VARCHAR(255),
    side            VARCHAR(255),
    type            VARCHAR(255),
    quantity        DOUBLE PRECISION,
    price           DOUBLE PRECISION,
    time_in_force   VARCHAR(255),
    status          VARCHAR(255),
    created_at      TIMESTAMP WITHOUT TIME ZONE,
    idempotency_key VARCHAR(255),
    CONSTRAINT pk_orders PRIMARY KEY (id)
);

CREATE TABLE positions
(
    id       BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    user_id  BIGINT                                  NOT NULL,
    symbol   VARCHAR(255),
    quantity DOUBLE PRECISION                        NOT NULL,
    side     VARCHAR(255),
    CONSTRAINT pk_positions PRIMARY KEY (id)
);

CREATE TABLE transactions
(
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    user_id         BIGINT                                  NOT NULL,
    amount          DOUBLE PRECISION                        NOT NULL,
    status          VARCHAR(255)                            NOT NULL,
    idempotency_key VARCHAR(255)                            NOT NULL,
    created_at      TIMESTAMP WITHOUT TIME ZONE,
    CONSTRAINT pk_transactions PRIMARY KEY (id)
);

CREATE TABLE users
(
    id                BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    email             VARCHAR(255)                            NOT NULL,
    password          VARCHAR(255)                            NOT NULL,
    phone             VARCHAR(255),
    first_name        VARCHAR(255),
    last_name         VARCHAR(255),
    address           VARCHAR(255),
    date_of_birth     date,
    status            VARCHAR(255),
    totp_secret       VARCHAR(255),
    created_at        TIMESTAMP WITHOUT TIME ZONE,
    kyc_document_hash VARCHAR(255),
    mfa_enabled       BOOLEAN                                 NOT NULL,
    CONSTRAINT pk_users PRIMARY KEY (id)
);

CREATE TABLE wallets
(
    id      BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    user_id BIGINT                                  NOT NULL,
    balance DOUBLE PRECISION                        NOT NULL,
    CONSTRAINT pk_wallets PRIMARY KEY (id)
);

ALTER TABLE users
    ADD CONSTRAINT uc_users_email UNIQUE (email);

ALTER TABLE wallets
    ADD CONSTRAINT uc_wallets_user UNIQUE (user_id);

CREATE INDEX idx_user_email ON users (email);

ALTER TABLE orders
    ADD CONSTRAINT FK_ORDERS_ON_USER FOREIGN KEY (user_id) REFERENCES users (id);

ALTER TABLE positions
    ADD CONSTRAINT FK_POSITIONS_ON_USER FOREIGN KEY (user_id) REFERENCES users (id);

ALTER TABLE transactions
    ADD CONSTRAINT FK_TRANSACTIONS_ON_USER FOREIGN KEY (user_id) REFERENCES users (id);

ALTER TABLE wallets
    ADD CONSTRAINT FK_WALLETS_ON_USER FOREIGN KEY (user_id) REFERENCES users (id);